[gd_scene load_steps=2 format=3 uid="uid://debug_combat_panel_enhanced_001"]

[ext_resource type="Script" path="res://scripts/debug/debug_combat_panel_enhanced.gd" id="1"]

[node name="DebugCombatPanelEnhanced" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 50.0
offset_right = 225.0
offset_bottom = 700.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "ðŸŽ® Debug Combat Panel"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
layout_mode = 2
text = "âœ•"
flat = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="Instructions" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Ctrl + = to toggle  â€¢  ESC to close  â€¢  Click to start"
theme_override_font_sizes/font_size = 11
autowrap_mode = 2

[node name="SearchBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SearchBox" type="LineEdit" parent="PanelContainer/MarginContainer/VBox/SearchBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search encounters..."

[node name="ClearButton" type="Button" parent="PanelContainer/MarginContainer/VBox/SearchBar"]
layout_mode = 2
text = "Clear"

[node name="StatsBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="PanelContainer/MarginContainer/VBox/StatsBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "0 encounters available"
theme_override_font_sizes/font_size = 11

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EncounterList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
